--- a/oehealth_idn/report/report_menu.xml
+++ b/oehealth_idn/report/report_menu.xml
@@ -75,6 +75,15 @@
 
     <report id="detail_transaksi_invoice_report_menu" string="Detail Transaksi Invoice" model="account.invoice" report_type="qweb-pdf" name="oehealth_idn.report_detail_transaksi_invoice" menu="True" />
 
+    <report 
+            id="owlexa_batch_invoices"
+            model="owlexa.batch"
+            string="Owlexa Batch Invoices"
+            report_type="qweb-pdf"
+            name="oehealth_idn.report_invoice_batch_owlexa"
+            file="oehealth_idn.report_invoice_batch_owlexa"
+    />
+
     <!-- Set Paper Format for the Patient Card Report -->
     <record id="patient_card_paperformat" model="report.paperformat">
         <field name="name">Patient Card Format</field>
