--- a/oehealth_idn/report/report_rekam_medis_rawat_jalan_template.xml
+++ b/oehealth_idn/report/report_rekam_medis_rawat_jalan_template.xml
@@ -16,7 +16,7 @@
                                 <td></td>
                                 <td>No.NPP : 
                                         
-                                        <t t-if="'Employee' == patient['guarantor']">
+                                        <t t-if="patient['is_employee'] == true">
                                             <span t-esc="patient['employee_number']" />
                                         </t>
                                            
