--- a/oehealth_idn/report/pengkajian_rawat_inap_report.xml
+++ b/oehealth_idn/report/pengkajian_rawat_inap_report.xml
@@ -45,8 +45,8 @@
                                             <t t-if="'Insurance' == o.walkin.payment">
                                                 BPJS/Insurance No : <span t-field="o.walkin.insurance.ins_no" />
                                             </t>
-                                            <t t-if="'Employe' == o.walkin.payment">
-                                                NPP No: <span t-field="o.walkin.employee_id.employee_number" />
+                                            <t t-if="o.patient.is_employee == true">
+                                                NPP No: <span t-field="o.patient.employee_number" />
                                             </t>
                                             <br />
                                             <span t-field="o.walkin.detail_payment_guarantor" />
