--- a/oehealth_idn/report/rekam_medis_rawat_jalan_report.xml
+++ b/oehealth_idn/report/rekam_medis_rawat_jalan_report.xml
@@ -20,8 +20,8 @@
                                 <td>No.RM : <span t-field="o.patient.medical_record" /></td>
                                 <td></td>
                                 <td>No.NPP : 
-                                        <t t-if="'Employe' == o.walkin.payment">
-                                                <span t-field="o.employee_id.employee_number" />
+                                        <t t-if="o.patient.is_employee == true">
+                                                <span t-field="o.patient.employee_number" />
                                         </t>
                                         
                                 </td>
