--- a/oehealth_idn/report/catatan_asuhan_gizi_report.xml
+++ b/oehealth_idn/report/catatan_asuhan_gizi_report.xml
@@ -7,7 +7,8 @@
                     <div class="page">
                         <style>
                             th, td {
-                            padding: 5px;
+                            padding: 3px;
+                            font-size:10px;
                             }
                         </style>
                         <div class="oe_structure">
