--- a/oehealth_idn/report/registration_reciept.xml
+++ b/oehealth_idn/report/registration_reciept.xml
@@ -107,7 +107,7 @@
                                         </div>
                                     </div>
                                     <br/>
-                                    <div class="row text-center" styles="margin-top:30px;">
+                                    <div class="row text-center" style="margin-top:30px;">
                                         <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', o.name, 600, 100)" style="width:300px;height:50px"/>                                    
                                     </div>
                                 </div>
